--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,14 +25,12 @@
     <script defer src="/assets/js/fontawesome/solid.min.js"></script>
     <script defer src="/assets/js/fontawesome/fontawesome.min.js"></script>
     
-    <link rel="apple-touch-icon" sizes="180x180" href="https://insulaedraconis.org/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://insulaedraconis.org/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://insulaedraconis.org/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="https://insulaedraconis.org/images/icons/site.webmanifest">
-    <link rel="mask-icon" href="https://insulaedraconis.org/images/icons/safari-pinned-tab.svg" color="#002ad7">
-    <link rel="shortcut icon" href="https://insulaedraconis.org/favicon.ico">
-    <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-config" content="https://insulaedraconis.org/images/icons/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://drachenwald.sca.org/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://drachenwald.sca.org/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://drachenwald.sca.org/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="https://drachenwald.sca.org/images/favicons/site.webmanifest">
+    <link rel="mask-icon" href="https://drachenwald.sca.org/images/favicons/safari-pinned-tab.svg" color="#000000">
+    <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
 
 	</head>
