--- a/_layouts/webindex.html
+++ b/_layouts/webindex.html
@@ -12,6 +12,7 @@
           <div class="text-center mb-4">
             <a class="btn btn-primary m-3 shadow" href="/print/"><i class="fa-solid fa-print"></i> Printable version</a>
             <a class="btn btn-primary m-3 shadow" href="/ceremonies.pdf"><i class="fa-solid fa-book"></i> Download PDF</a>
+            <a class="btn btn-primary m-3 shadow" href="/largeprint/"><i class="fa-solid fa-up-right-and-down-left-from-center"></i> Large print version</a>
           </div>
 
           <div class="row">
