--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -3,7 +3,7 @@
 <div id="main" class="wrapper style3">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 order-last col-md-4 col-lg-3 col-xl-3 col-xxl-2 order-md-first">
+			<div class="col-12 order-last col-md-4 col-lg-3 order-md-first">
 				<div class="p-2">
 					<section id="sidebar">
 						{% include sidebar.html %}
@@ -11,7 +11,7 @@
 				</div>
 			</div>
 
-			<div class="col-12 order-first col-md-8 col-lg-9 col-xl-9 col-xxl-10 order-md-last">
+			<div class="col-12 order-first col-md-8 col-lg-9 order-md-last">
 				<section id="content">
 					{{ content }}
 				</section>
