--- a/_layouts/webindex.html
+++ b/_layouts/webindex.html
@@ -8,11 +8,45 @@
 				<section id="content">
 
           {{ content }}
+
+        </section>
+
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-0 col-md-1 col-xl-2"><br /></div>
+
+      <div class="col-sm-6 col-md-5 col-xl-4 mb-3 mb-sm-0">
+        <div class="card shadow">
+          <div class="card-body text-center">
+            <h4 class="card-title mb-3">Regular print</h4>
+            <div class="btn-group-vertical shadow">
+              <a class="btn btn-outline-primary" href="/print/"><i class="fa-solid fa-print"></i> Printable version</a>
+              <a class="btn btn-outline-primary" href="/ceremonies.pdf"><i class="fa-solid fa-file-pdf"></i> Download PDF</a>  
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-5 col-xl-4 mb-3 mb-sm-0">
+        <div class="card shadow">
+          <div class="card-body text-center">
+            <h4 class="card-title mb-3">Large print</h4>
+            <div class="btn-group-vertical shadow">
+              <a class="btn btn-outline-primary" href="/largeprint/"><i class="fa-solid fa-print"></i> Printable version</a>
+              <a class="btn btn-outline-primary" href="/ceremonies-largeprint.pdf"><i class="fa-solid fa-file-pdf"></i> Download PDF</a>  
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-0 col-md-1 col-xl-2"><br /></div>
+
+    </div>
     
           <div class="text-center mb-4">
-            <a class="btn btn-primary m-3 shadow" href="/print/"><i class="fa-solid fa-print"></i> Printable version</a>
-            <a class="btn btn-primary m-3 shadow" href="/ceremonies.pdf"><i class="fa-solid fa-book"></i> Download PDF</a>
-            <a class="btn btn-primary m-3 shadow" href="/largeprint/"><i class="fa-solid fa-up-right-and-down-left-from-center"></i> Large print version</a>
           </div>
 
           <div class="row">
