--- a/_layouts/webindex.html
+++ b/_layouts/webindex.html
@@ -27,7 +27,7 @@
               <h4 class="card-title mb-3">Regular print</h4>
               <div class="btn-group-vertical shadow">
                 <a class="btn btn-outline-primary" href="/print/"><i class="fa-solid fa-print"></i> Printable version</a>
-                <a class="btn btn-outline-primary" href="/ceremonies.pdf"><i class="fa-solid fa-file-pdf"></i> Download PDF</a>  
+                <a class="btn btn-outline-primary" href="/ceremonies.pdf" download filename="dw-ceremonies.pdf"><i class="fa-solid fa-file-pdf"></i> Download PDF</a>  
               </div>
             </div>
           </div>
@@ -37,7 +37,7 @@
               <h4 class="card-title mb-3">Large print</h4>
               <div class="btn-group-vertical shadow">
                 <a class="btn btn-outline-primary" href="/largeprint/"><i class="fa-solid fa-print"></i> Printable version</a>
-                <a class="btn btn-outline-primary" href="/ceremonies-largeprint.pdf"><i class="fa-solid fa-file-pdf"></i> Download PDF</a>  
+                <a class="btn btn-outline-primary" href="/ceremonies-largeprint.pdf" download filename="dw-ceremonies-largeprint.pdf"><i class="fa-solid fa-file-pdf"></i> Download PDF</a>  
               </div>
             </div>
           </div>
