fix unicode on print version

--- a/_layouts/print.html
+++ b/_layouts/print.html
@@ -3,6 +3,7 @@
 
   <head>
     <title></title>
+    <meta charset="utf-8" />
     <link href="../assets/css/interface.css" rel="stylesheet" type="text/css" />
     {% if page.largeprint %}
       <link href="../assets/css/largeprint.css" rel="stylesheet" type="text/css" />
