word version for copy/paste

--- a/_layouts/print.html
+++ b/_layouts/print.html
@@ -34,7 +34,7 @@
           Book of Ceremonies
         </div>
       </div>
-      <img src="/assets/img/heraldry.svg">
+      <img src="../assets/img/heraldry.svg">
       <div class="backing-box-legend">
         <div class="cover-legend">
           <span>
